Passes submission title to template, displays as header Both template and code changed so that header1 is created for episode titles Written in mind of iterating over large numbers of submissions

--- a/templates/gifs.jinja2
+++ b/templates/gifs.jinja2
@@ -5,8 +5,11 @@
 </head>
 <body>
 <ul>
-{% for text,url in giflinks %}
+{% for title_key in eps %}
+<h1>{{ title_key }}</h1>
+{% for text,url in eps[title_key] %}
 <li><a href="{{ url }}">{{ text }}</a></li>
+{% endfor %}
 {% endfor %}
 </ul>
 </body>
