--- a/templates/gifs.jinja2
+++ b/templates/gifs.jinja2
@@ -4,10 +4,14 @@
 <title>GIFS</title>
 </head>
 <body>
+<h1 id="top">Contents</h1>
+{% for sub_id_key in eps %}
+<p><a href={{"#"~sub_id_key}}>{{eps[sub_id_key]["title"]}}</a></p>
+{% endfor %}
 <ul>
-{% for title_key in eps %}
-<h1>{{ title_key }}</h1>
-{% for text,url in eps[title_key] %}
+{% for sub_id_key in eps %}
+<h2 id={{sub_id_key}}>{{ eps[sub_id_key]["title"] ~"  -  (<a href='#top'>top</a>)"}}</h2>
+{% for text,url in eps[sub_id_key]["links"] %}
 <li><a href="{{ url }}">{{ text }}</a></li>
 {% endfor %}
 {% endfor %}
